--- a/docs/source/fables/驴.md
+++ b/docs/source/fables/驴.md
@@ -9,7 +9,7 @@
 一个小贩养了一头驴，有一天，他买了一批盐，几乎全都驮到了驴的背上。在回家的路上，经过一条小河时，驴不慎落水。盐巴全都落入水中打湿了，其中一部分盐已经溶化，被水流冲走，所以，当他再次驮起盐巴，驴发现自己的担子明显轻了很多。然而，他的主人又赶着他回到镇上，买了更多的盐，添加到原有的那些货物上，重新出发。等来到小河边，驴再次掉入水中，又起来，如上次一样，驴背上的担子又轻了许多。主人察觉出了驴的鬼把戏，再次赶着他回到镇上，这次主人买了一些海绵，绑到驴背上。当他们又来到小河边，驴又故技重施，可是这一次，因为海绵遇水膨胀，等站起身后，他发现背上的担子更重了。
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 好牌只能用一次，多了就无效。
 
 <audio src='http://quantile.shangfr.site/fables/audio44_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -25,7 +25,7 @@
 A Pedlar who owned an Ass one day bought a quantity of salt, and loaded up his beast with as much as he could bear. On the way home the Ass stumbled as he was crossing a stream and fell into the water. The salt got thoroughly wetted and much of it melted and drained away, so that, when he got on his legs again, the Ass found his load had become much less heavy. His master, however, drove him back to town and bought more salt, which he added to what remained in the panniers, and started out again. No sooner had they reached a stream than the Ass lay down in it, and rose, as before, with a much lighter load. But his master detected the trick, and turning back once more, bought a large number of sponges, and piled them on the back of the Ass. When they came to the stream the Ass again lay down: but this time, as the sponges soaked up large quantities of water, he found, when he got up on his legs, that he had a bigger burden to carry than ever.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 You may play a good card once too often.
 
 <audio src='http://quantile.shangfr.site/fables/audio44.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -45,7 +45,7 @@ You may play a good card once too often.
 一次，某人为了夏日的旅行而雇了一头驴，于是，驴的主人跟在后面赶着驴出发了。烈日当头的正午时分，越走越热的他们停下来休息。行人想要躺在驴的影子下休息，可是驴的主人也希望能够躲避太阳的照射，不想让他这么做，因为行人只说雇佣了驴，没说要雇佣它的影子。而行人也坚持认为自己完全有权利控制驴的一切行为。他们争论不休，互相打了起来。就在他们打架时，驴逃之夭夭了。
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 人们往往为小事争吵不休,从而失去了最重要的东西。
 
 <audio src='http://quantile.shangfr.site/fables/audio50_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -61,7 +61,7 @@ You may play a good card once too often.
 A certain man hired an Ass for a journey in summertime, and started out with the owner following behind to drive the beast. By and by, in the heat of the day, they stopped to rest, and the traveller wanted to lie down in the Ass's Shadow; but the owner, who himself wished to be out of the sun, wouldn't let him do that; for he said he had hired the Ass only, and not his Shadow: the other maintained that his bargain secured him complete control of the Ass for the time being. From words they came to blows; and while they were belabouring each other the Ass took to his heels and was soon out of sight.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 Fighting over small matters is not worth it and can even end up costing you more than you bargained for.
 
 <audio src='http://quantile.shangfr.site/fables/audio50.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -81,7 +81,7 @@ Fighting over small matters is not worth it and can even end up costing you more
 一头驴发现了一张狮子的皮，于是就披到身上。他走出去吓唬其它动物，所有见到他的人和动物都把他当成了狮子，吓得四处逃跑。驴见自己的诡计得逞了，兴奋地大叫起来。狐狸听到了他的声音，立刻认出这是一头驴，于是就对他说："哦，朋友，这才是真正的你，是吗？要不是听到了你的声音，我也被你吓着了。"突然一阵风刮来，把驴身上披着的狮皮吹走了，驴子原形毕露。这时，动物们见此情形，又都跑回来，用木板和棍棒狠狠地打他。
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 外表虽然可以暂时掩盖一个人的缺点,但它很容易被揭穿。
 
 <audio src='http://quantile.shangfr.site/fables/audio60_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -97,7 +97,7 @@ Fighting over small matters is not worth it and can even end up costing you more
 An Ass found a Lion's Skin, and dressed himself up in it. Then he went about frightening every one he met, for they all took him to be a lion, men and beasts alike, and took to their heels when they saw him coming. Elated by the success of his trick, he loudly brayed in triumph. The Fox heard him, and recognised him at once for the Ass he was, and said to him, "Oho, my friend, it's you, is it? I, too, should have been afraid if I hadn't heard your voice."
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 Fine clothes may disguise, but silly words will disclose a fool.
 
 <audio src='http://quantile.shangfr.site/fables/audio60.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -117,7 +117,7 @@ Fine clothes may disguise, but silly words will disclose a fool.
 一位老农民正坐在草地上看驴，驴被紧紧盯着。突然农民看到全副武装的人们走近，便立刻跳了起来，恳请驴跟他一起尽快飞走。"否则，"他说，"我们便会被敌人逮住。"驴只是懒懒地看了看，便说："如果这样的话，你不认为他们会让我驮更重的东西？""不，"主人说。"哦，那么，"驴说，"我不介意他们把我抓走，我再也不会比现在更糟了。"
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 当我们面临危机时，如果不积极主动改变，我们可能会处于更糟的境地。
 
 <audio src='http://quantile.shangfr.site/fables/audio98_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -133,7 +133,7 @@ Fine clothes may disguise, but silly words will disclose a fool.
 An old Peasant was sitting in a meadow watching his Ass, which was grazing close by, when all of a sudden he caught sight of armed men stealthily approaching. He jumped up in a moment, and begged the Ass to fly with him as fast as he could, "Or else," said he, "we shall both be captured by the enemy." But the Ass just looked round lazily and said, "And if so, do you think they'll make me carry heavier loads than I have to now?" "No," said his master. "Oh, well, then," said the Ass, "I don't mind if they do take me, for I shan't be any worse off."
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 Think ahead and plan for potential problems, rather than relying on outside help when difficult situations arise.
 
 <audio src='http://quantile.shangfr.site/fables/audio98.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -153,7 +153,7 @@ Think ahead and plan for potential problems, rather than relying on outside help
 一只狮子和一头野驴联合外出觅食------野驴能以超快的速度追赶猎物，而狮子则能迅速赶来捕获猎物。他们成功地抓获了猎物，然后，狮子把猎物分成了三份。"我来拿第一份，"狮子说，"因为我是百兽之王；第二份也归我，因为作为你的合作者，我理应分享剩下的一半；至于这第三份，除非你自愿让给我，然后乖乖地滚开，否则你一定会为此而抱憾终身！"
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 强者为王。
 
 <audio src='http://quantile.shangfr.site/fables/audio105_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -169,7 +169,7 @@ Think ahead and plan for potential problems, rather than relying on outside help
 A Lion and a Wild Ass went out hunting together: the latter was to run down the prey by his superior speed, and the former would then come up and despatch it. They met with great success; and when it came to sharing the spoil the Lion divided it all into three equal portions. "I will take the first," said he, "because I am King of the beasts; I will also take the second, because, as your partner, I am entitled to half of what remains; and as for the third---well, unless you give it up to me and take yourself off pretty quick, the third, believe me, will make you feel very sorry for yourself!"
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 Might makes right.
 
 <audio src='http://quantile.shangfr.site/fables/audio105.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -189,7 +189,7 @@ Might makes right.
 一只狮子和一头驴合作外出打猎。走了一会儿，他们来到几只野山羊居住的洞口。狮子守在洞口等着野山羊出来，驴则跑进洞里，为了把山羊赶出去而乱喊乱跳，吓唬他们。守候在洞口的狮子将跑出洞来的野山羊依次抓获了，等到洞里空无一只羊之后，驴跑出洞来，说："怎么样，我把他们都吓出来了，干得不错吧？""我认为你干得很好，"狮子说，"如果我不知道你是一头驴，也许就会转身走了。"
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 这篇文章的寓意是：协作可以实现更大的成就，强者也要认识到自身的不足和他人的可贵之处。
 
 <audio src='http://quantile.shangfr.site/fables/audio127_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -205,7 +205,7 @@ Might makes right.
 A Lion and an Ass set up as partners and went a-hunting together. In course of time they came to a cave in which there were a number of wild goats. The Lion took up his stand at the mouth of the cave, and waited for them to come out; while the Ass went inside and brayed for all he was worth in order to frighten them out into the open. The Lion struck them down one by one as they appeared; and when the cave was empty the Ass came out and said, "Well, I scared them pretty well, didn't I?" "I should think you did," said the Lion: "why, if I hadn't known you were an Ass, I should have turned and run myself."
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 Moral: Even though you may not have the strength of those around you, your cunning can still make a difference.
 
 <audio src='http://quantile.shangfr.site/fables/audio127.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -225,7 +225,7 @@ Moral: Even though you may not have the strength of those around you, your cunni
 一头驴和一只公鸡在牛圈里一起生活。不久，一只饿了好几天的狮子走过来，想要逮一头驴当饭吃。这时，公鸡站起来，扑腾着翅膀大叫了起来。假如真有什么东西能使狮子害怕的话，那一定是公鸡扑腾着翅膀的大叫声。而驴却因此而洋洋自得，心想如果狮子都不敢面对一只小公鸡，那就更不敢面对一头驴了。于是，他立即跑出去追赶狮子。然而，等他们跑远了，听不到公鸡的叫声时，狮子猛然转过身来，把驴吃掉了。
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 盲目的自信通常会导致失败。
 
 <audio src='http://quantile.shangfr.site/fables/audio158_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -241,7 +241,7 @@ Moral: Even though you may not have the strength of those around you, your cunni
 An Ass and a Cock were in a cattle-pen together. Presently a Lion, who had been starving for days, came along and was just about to fall upon the Ass and make a meal of him when the Cock, rising to his full height and flapping his wings vigorously, uttered a tremendous crow. Now, if there is one thing that frightens a Lion, it is the crowing of a Cock: and this one had no sooner heard the noise than he fled. The Ass was mightily elated at this, and thought that, if the Lion couldn't face a Cock, he would be still less likely to stand up to an Ass: so he ran out and pursued him. But when the two had got well out of sight and hearing of the Cock, the Lion suddenly turned upon the Ass and ate him up.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 False confidence often leads to disaster.
 
 <audio src='http://quantile.shangfr.site/fables/audio158.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -261,7 +261,7 @@ False confidence often leads to disaster.
 磨坊主和小儿子牵着一头驴到邻近的市场上，希望能给驴找到一个新主人。在路上，他们遇见了几个女孩子，她们笑着说："你们看见过这样的傻瓜吗，放着驴不骑，却要在尘土飞扬的路上走！"磨坊主心想，她们说得有点道理，于是就让儿子骑上驴，自己则牵着驴走。走了一会，他们遇到了几个老朋友，打过招呼后，朋友们说："你把儿子宠坏了，竟然让他骑在驴上，而你却在地上辛辛苦苦地走！让他下来，这个小懒骨头！这样才对他有好处。"磨坊主听从了他们的建议，便叫儿子下来，自己骑了上去。没走多远，他们又遇到一群妇女和孩子，磨坊主又听他们说："这个老头可真自私，自己舒服地骑在驴上，让那可怜的孩子一路跟着跑！"于是，磨坊主立刻又叫儿子坐到他后面。又往前走了一段路后，他们又遇到了几个路人，他们问磨坊主胯下的这头驴子是自己的，还是临时租的。磨坊主说是自己的，正要去市场卖掉驴。"天啊！"他们说，"驮着你们俩一路走来，这个可怜的牲口看上去已经筋疲力尽了，等它到了市场里，估计没人愿意多看它一眼。也许你们抬着它去市场更好些！""只要你高兴就好，"磨坊主说，"我们可以试一下。"于是，他和儿子一起跳下驴，用绳子绑好驴的四条腿，并用一根木棍挑起驴，最后父子俩终于抬着驴来到了镇上。这个场面有点不寻常，很多人围过来看热闹，大家都取笑他们父子俩，说他们太残酷了，甚至还有人说他们是疯子。他们接着要穿过河上的一座桥，就在这时，被吵闹声和自己的奇怪姿势吓呆了的驴，用力挣断了绑缚它的绳子，掉到河里被冲走了。不幸的磨坊主又气愤又羞愧，连忙夺路而逃。他终于信服了一个道理------努力取悦所有人，其实等于谁也没取悦到，反倒还丢了自己的驴。
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 这篇文章寓意: 努力讨好所有人其实无异于让自己落空，应当正确判断形势，自行做出恰当的决定。
 
 <audio src='http://quantile.shangfr.site/fables/audio169_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -282,7 +282,7 @@ They had then got to a bridge over the river, where the Ass, frightened by the n
 again, convinced that in trying to please all he had pleased none, and had lost his Ass into the bargain.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 Moral of the story: When trying to please everyone, you may end up pleasing no one and losing something valuable in the process.
 
 <audio src='http://quantile.shangfr.site/fables/audio169.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -302,7 +302,7 @@ Moral of the story: When trying to please everyone, you may end up pleasing no o
 某人有一头驴和一头骡子，有一天，他把货物分别放在驴和骡子的背上，就出远门了。只要在平地上走，驴还能应付，但是一走到大山之间那崎岖不平的山路上，驴就上气不接下气了。于是，驴请求骡子替他分担一部分货物，可是，骡子却拒绝了。由于极度疲倦，驴一不小心从山上滚下去，摔死了。赶驴人非常沮丧，但也只能如此，他把驴身上驮的货物放在了骡子的背上，同时还割下了驴皮，一起放在货物顶上。骡子也只得忍气吞声默默承担着所有重量，他一边蹒跚着前进，一边自言自语："我真是活该！如果我一开始就愿意帮助驴分担重量的话，现在也就不会既驮着本该在他背上的货物，又驮着他的皮了。"
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 这篇文章的寓意是：遇到困难时，仁慈的善行会换来报答，而残忍的行为只会给自己带来懊悔。
 
 <audio src='http://quantile.shangfr.site/fables/audio175_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -318,7 +318,7 @@ Moral of the story: When trying to please everyone, you may end up pleasing no o
 A certain man who had an Ass and a Mule loaded them both up one day and set out upon a journey. So long as the road was fairly level, the Ass got on very well: but by and by they came to a place among the hills where the road was very rough and steep, and the Ass was at his last gasp. So he begged the Mule to relieve him of a part of his load: but the Mule refused. At last, from sheer weariness, the Ass stumbled and fell down a steep place and was killed. The driver was in despair, but he did the best he could: he added the Ass's load to the Mule's, and he also flayed the Ass and put his skin on the top of the double load. The Mule could only just manage the extra weight, and, as he staggered painfully along, he said to himself, "I have only got what I deserved: if I had been willing to help the Ass at first, I should not now be carrying his load and his skin into the bargain."
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 Moral: Selfishness brings its own punishment.
 
 <audio src='http://quantile.shangfr.site/fables/audio175.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -338,7 +338,7 @@ Moral: Selfishness brings its own punishment.
 某人赶着驴走在下山的路上，一阵小跑之后，驴突然离开大道，冲到了悬崖边。就在驴即将滑下悬崖时，赶驴的人一把抓住他的尾巴，用劲往回拉。可是，无论如何也无法将驴从悬崖边拉上来。最后，赶驴的人放弃了，说道："好吧，随你去吧，你愿意掉下悬崖，就掉吧，很快你就会发现，这是一条通向死亡的路。"
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 寓意是：在面对危险时，要有反思能力，否则自己将陷入死亡的危险。
 
 <audio src='http://quantile.shangfr.site/fables/audio179_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -354,7 +354,7 @@ Moral: Selfishness brings its own punishment.
 An Ass was being driven down a mountain road, and after jogging along for a while sensibly enough he suddenly quitted the track and rushed to the edge of a precipice. He was just about to leap over the edge when his Driver caught hold of his tail and did his best to pull him back: but pull as he might he couldn't get the Ass to budge from the brink. At last he gave up, crying, "All right, then, get to the bottom your own way; but it's the way to sudden death, as you'll find out quick enough."
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 A single moment of recklessness can lead to disaster; be sure to think things through before you act.
 
 <audio src='http://quantile.shangfr.site/fables/audio179.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -374,7 +374,7 @@ A single moment of recklessness can lead to disaster; be sure to think things th
 有个人想买一头驴，于是，他来到市场里。有一群貌似一样的畜生被主人牵着向他走来，他提出应该将驴牵回家，好检验一下驴的状况。回到家后，他把驴安置在马棚里，里面还混杂着其他牲口。驴环视了一下四周，立刻来到马棚里一头好吃懒做的驴旁边。主人见此，立刻给那头驴套上辔头，牵去还给驴的卖主。看到他们这么快就回来了，卖主很惊讶，就说："为什么回来了？你已经检验过它了？"那人答道："我可不想再做什么检验了，从它选择的同伴来看，我就已经知道它是什么样的牲口了。"
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 物以类聚，人以群分。
 
 <audio src='http://quantile.shangfr.site/fables/audio187_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -390,7 +390,7 @@ A single moment of recklessness can lead to disaster; be sure to think things th
 A Man who wanted to buy an Ass went to market, and, coming across a likely-looking beast, arranged with the owner that he should be allowed to take him home on trial to see what he was like. When he reached home, he put him into his stable along with the other asses. The newcomer took a look round, and immediately went and chose a place next to the laziest and greediest beast in the stable. When the master saw this he put a halter on him at once, and led him off and handed him over to his owner again. The latter was a good deal surprised to see him back so soon, and said, "Why, do you mean to say you have tested him already?" "I don't want to put him through any more tests," replied the other: "I could see what sort of beast he is from the companion he chose for himself."
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 A man is known by the company he keeps.
 
 <audio src='http://quantile.shangfr.site/fables/audio187.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -410,7 +410,7 @@ A man is known by the company he keeps.
 有一天，一头无所事事的野驴，看见一头家驴正舒适地躺在阳光充足的地方自娱自乐。他走了过去，说："你可真幸运呀！从你那光滑的皮肤就能看出来，你的日子过得很舒服呀，我真羡慕你！"不久，野驴又看见家驴驮着沉重的货物，驴夫还跟在后面不停地用鞭子抽打他，这一次，野驴说："我的朋友，我不再羡慕你了，因为我知道你付出了惨痛的代价。"
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 用昂贵代价换来的优势是令人怀疑的福气。
 
 <audio src='http://quantile.shangfr.site/fables/audio196_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -427,7 +427,7 @@ A Wild Ass, who was wandering idly about, one day came upon a Pack-Ass lying at 
 Going up to him, he said, "What a lucky beast you are! Your sleek coat shows how well you live: how I envy you!" Not long after the Wild Ass saw his acquaintance again, but this time he was carrying a heavy load, and his driver was following behind and beating him with a thick stick. "Ah, my friend," said the Wild Ass, "I don't envy you any more: for I see you pay dear for your comforts."
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 Advantages that are dearly bought are doubtful blessings.
 
 <audio src='http://quantile.shangfr.site/fables/audio196.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -447,7 +447,7 @@ Advantages that are dearly bought are doubtful blessings.
 有一头生活在园丁家里的驴，过着艰辛的日子，不仅吃得少、干得多，还经常挨主人的鞭打。于是，驴请求朱庇特让他离开园丁，换另外一个主人。于是朱庇特派墨丘利去找园丁，让他把驴卖给一个陶艺工人，园丁照做了。然而，驴仍然像以前一样不满足，因为他现在过得比以前还辛苦。于是，他又请求朱庇特让自己离开第二个主人，再换另外一个。朱庇特又安排第二个主人把他卖给一个皮匠。可是，当驴一看到新主人的生意，就绝望地哭起来："为什么我总对以前的主人不满意呀！为什么不满足于自己的辛苦工作和微薄待遇呀？至少，我会慢慢地消耗至死，而现在，我就要在制皮桶里结束性命了。"
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 到了更坏的主人那里，才知道前主人的好。
 
 <audio src='http://quantile.shangfr.site/fables/audio197_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -463,7 +463,7 @@ Advantages that are dearly bought are doubtful blessings.
 A Gardener had an Ass which had a very hard time of it, what with scanty food, heavy loads, and constant beating. The Ass therefore begged Jupiter to take him away from the Gardener and hand him over to another master. So Jupiter sent Mercury to the Gardener to bid him sell the Ass to a Potter, which he did. But the Ass was as discontented as ever, for he had to work harder than before: so he begged Jupiter for relief a second time, and Jupiter very obligingly arranged that he should be sold to a Tanner. But when the Ass saw what his new master's trade was, he cried in despair, "Why wasn't I content to serve either of my former masters, hard as I had to work and badly as I was treated? for they would have buried me decently, but now I shall come in the end to the tanning-vat."
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 Servants don't know a good master till they have served a worse.
 
 <audio src='http://quantile.shangfr.site/fables/audio197.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -483,7 +483,7 @@ Servants don't know a good master till they have served a worse.
 一头野驴看到一头家驴背负着沉重的货物一路小跑，便讥讽他过着奴隶般的生活："和我相比，你过得多么卑微呀！我自由自在地享受着大自然，从不下苦力，说到食物，我只需要跑到山上去，就能发现大量吃的东西。再看看你！只能依靠主人施舍点吃的，他不仅每天都让你驮重物，还无情地鞭打你。"这时，一只狮子出现在他们视野中，由于驴夫的出现，狮子没有骚扰家驴，直接扑向了没有保护者的野驴，立即吃掉了野驴。
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 除非能照顾好自己，否则做自己的主人一点儿用也没有。
 
 <audio src='http://quantile.shangfr.site/fables/audio198_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -499,7 +499,7 @@ Servants don't know a good master till they have served a worse.
 A Wild Ass saw a Pack-Ass jogging along under a heavy load, and taunted him with the condition of slavery in which he lived, in these words: "What a vile lot is yours compared with mine! I am free as the air, and never do a stroke of work; and, as for fodder, I have only to go to the hills and there I find far more than enough for my needs. But you! you depend on your master for food, and he makes you carry heavy loads every day and beats you unmercifully." At that moment a Lion appeared on the scene, and made no attempt to molest the Pack-Ass owing to the presence of the driver; but he fell upon the Wild Ass, who had no one to protect him, and without more ado made a meal of him.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 It is no use being your own master unless you can stand up for yourself.
 
 <audio src='http://quantile.shangfr.site/fables/audio198.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -519,7 +519,7 @@ It is no use being your own master unless you can stand up for yourself.
 有个人把神像放在驴的背上，准备运到城里的一座寺庙里。他们走在路上时，所有遇见他们的人都对着神像顶礼膜拜，而驴却以为人们是在向它致敬，逐渐骄傲自满起来。最后，自以为是的他竟然幻想着可以肆意妄为，再也不用驮着沉重的货物了，于是，驴停下了脚步，再也不肯往前走。赶驴的人发现他这么固执，便用棍子狠狠地打了他一顿，并且说道："你这个蠢货，竟然自以为这是在向你致敬，人们会对一头驴这么恭敬吗？"
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 那些夺走他人荣誉的人，必定会遭受沉重的打击。
 
 <audio src='http://quantile.shangfr.site/fables/audio205_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -535,7 +535,7 @@ It is no use being your own master unless you can stand up for yourself.
 A certain man put an Image on the back of his Ass to take it to one of the temples of the town. As they went along the road all the people they met uncovered and bowed their heads out of reverence for the Image; but the Ass thought they were doing it out of respect for himself, and began to give himself airs accordingly. At last he became so conceited that he imagined he could do as he liked, and, by way of protest against the load he was carrying, he came to a full stop and flatly declined to proceed any further. His driver, finding him so obstinate, hit him hard and long with his stick, saying the while, "Oh, you dunderheaded idiot, do you suppose it's come to this, that men pay worship to an Ass?"
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 Rude shocks await those who take to themselves the credit that is due to others.
 
 <audio src='http://quantile.shangfr.site/fables/audio205.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -555,7 +555,7 @@ Rude shocks await those who take to themselves the credit that is due to others.
 农夫给他的公牛和驴一起套上牛轭，然后赶着它们下地犁田。这是一个糟糕的临时组合，但农夫已经尽力了，因为他只有一头公牛。干了一天活后，牲口被主人从牛轭里解放出来，驴对牛说："我们可是度过了艰难的一天，我们两个当中，谁载着主人回家呢？"听了驴的话，牛似乎很惊讶，"怎么这么问呢，"他说，"当然是你，像往常一样。"
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 这篇文章寓意是：即使被迫进行糟糕的临时组合，人们也应该做自己能力范围内的所有事。尽管面对困难，但仍应当慎重地思考，一方面以便化解矛盾，另一方面也能建立双赢的关系。
 
 <audio src='http://quantile.shangfr.site/fables/audio224_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -571,7 +571,7 @@ Rude shocks await those who take to themselves the credit that is due to others.
 A Ploughman yoked his Ox and his Ass together, and set to work to plough his field. It was a poor makeshift of a team, but it was the best he could do, as he had but a single Ox. At the end of the day, when the beasts were loosed from the yoke, the Ass said to the Ox, "Well, we've had a hard day: which of us is to carry the master home?" The Ox looked surprised at the question. "Why," said he, "you, to be sure, as usual."
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 The moral of this story is that we should not expect those in a weaker position to always bear the brunt of the work and the responsibility.
 
 <audio src='http://quantile.shangfr.site/fables/audio224.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -591,7 +591,7 @@ The moral of this story is that we should not expect those in a weaker position 
 一匹马对自己精美的马具感到自豪，他在一条小路上遇到了一头满载货物的驴。驴因货物太重，只能慢慢地走，而无法让马先过去。马不耐烦地说恨不得踢他一脚，让他快点走。驴默不作声，但是没有忘记马的傲慢无礼。不久，那匹马患了气喘病，被主人卖到了农场。有一天，当马正拉着粪车时，又遇到了驴，驴反而讥笑他说："哈！你从没想到会来这里干这种活吧，不是吗，你那么傲慢！现在，你那华丽的马具到哪里去了？"
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 这篇文章的寓意是：傲慢无礼定会有报应，要记住谦虚有礼才是上策。
 
 <audio src='http://quantile.shangfr.site/fables/audio269_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -607,7 +607,7 @@ The moral of this story is that we should not expect those in a weaker position 
 A Horse, proud of his fine harness, met an Ass on the high-road. As the Ass with his heavy burden moved slowly out of the way to let him pass, the Horse cried out impatiently that he could hardly resist kicking him to make him move faster. The Ass held his peace, but did not forget the other's insolence. Not long afterwards the Horse became broken-winded, and was sold by his owner to a farmer. One day, as he was drawing a dung-cart, he met the Ass again, who in turn derided him and said, "Aha! you never thought to come to this, did you, you who were so proud! Where are all your gay trappings now?"
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 The moral of this story is that pride comes before a fall and humility brings true greatness.
 
 <audio src='http://quantile.shangfr.site/fables/audio269.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -627,7 +627,7 @@ The moral of this story is that pride comes before a fall and humility brings tr
 一头驴被牵驾着穿过一条通往山腰的路，突然他愚蠢地想自己选择路径。他可以看到他的棚子在山脚下，对他来说最快的路线似乎是跳下最近的悬崖。就在他要跳下悬崖时，他的主人抓住他的尾巴试着把他拉回来，但是顽固的驴不愿意让步，拼命拉扯。好吧，他的主人
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 最终将他拉回回家，这里的寓意是，即使你有决定自己要走的路，有时候有人可以帮助你把你带回正确的路上。
 
 <audio src='http://quantile.shangfr.site/fables/audio293_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -643,7 +643,7 @@ The moral of this story is that pride comes before a fall and humility brings tr
 An Ass was being driven along a road leading down the mountain side, when he suddenly took it into his silly head to choose his own path. He could see his stall at the foot of the mountain, and to him the quickest way down seemed to be over the edge of the nearest cliff. Just as he was about to leap over, his master caught him by the tail and tried to pull him back, but the stubborn Ass would not yield and pulled with all his might. Very well, said his master, go your way, you willful beast, and see where it leads you. With that he let go, and the foolish Ass tumbled head over heels down the mountain side.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 They who will not listen to reason but stubbornly go their own way against the friendly advice of those who are wiser than they, are on the road to misfortune.
 
 <audio src='http://quantile.shangfr.site/fables/audio293.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -663,7 +663,7 @@ They who will not listen to reason but stubbornly go their own way against the f
 一天，狮子傲然走下森林小道，动物们都恭敬地让路，一头驴发出嘲笑的言论，狮子感到一阵怒火。但当他回头看是谁说的时候，他就静静地走了。他不会为这个傻瓜表示尊重，甚至不会用爪子抚摸他一下。
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 这篇文章寓意是：不要用自己的傲慢或嘲笑来伤害尊严，要学会尊重他人，并超越他人的无知。
 
 <audio src='http://quantile.shangfr.site/fables/audio302_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -679,7 +679,7 @@ They who will not listen to reason but stubbornly go their own way against the f
 One day as the Lion walked proudly down a forest aisle, and the animals respectfully made way for him, an Ass brayed a scornful remark as he passed. The Lion felt a flash of anger. But when he turned his head and saw who had spoken, he walked quietly on. He would not honor the fool with even so much as a stroke of his claws.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 Do not resent the remarks of a fool. Ignore them.
 
 <audio src='http://quantile.shangfr.site/fables/audio302.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -699,7 +699,7 @@ Do not resent the remarks of a fool. Ignore them.
 一个商人驮着一车货载满了盐从海边赶回家，来到一条有一个浅深浅渡口的河边。以前他们穿过这条河无事，但这一次驴子在渡口一半的时候滑倒了。最后商人还是让他站起来，但大量的盐都融化了。商人看到自己的载货比之前轻了许多，欣喜若狂，于是驴子就兴高采烈地越过了渡口。
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 寓意是：有时候，失去会让你受益。
 
 <audio src='http://quantile.shangfr.site/fables/audio314_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -715,7 +715,7 @@ Do not resent the remarks of a fool. Ignore them.
 A Merchant, driving his Ass homeward from the seashore with a heavy load of salt, came to a river crossed by a shallow ford. They had crossed this river many times before without accident, but this time the Ass slipped and fell when halfway over. And when the Merchant at last got him to his feet, much of the salt had melted away. Delighted to find how much lighter his burden had become, the Ass finished the journey very gayly. Next day the Merchant went for another load of salt. On the way home the Ass, remembering what had happened at the ford, purposely let himself fall into the water, and again got rid of most of his burden. The angry Merchant immediately turned about and drove the Ass back to the seashore, where he loaded him with two great baskets of sponges. At the ford the Ass again tumbled over; but when he had scrambled to his feet, it was a very disconsolate Ass that dragged himself homeward under a load ten times heavier than before.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 The same measures will not suit all circumstances.
 
 <audio src='http://quantile.shangfr.site/fables/audio314.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -735,7 +735,7 @@ The same measures will not suit all circumstances.
 狮子和驴子约定一起去打猎。在搜索猎物的过程中，猎人们看到许多野山羊跑进了一个洞穴，于是他们就制定了捉拿它们的计划。驴子要进入洞穴把羊赶出来，而狮子则站在入口处准备把它们打倒。计划运作得非常好。驴子在洞穴里发出了令人恐惧的嘶叫，用尽全力害怕逃走的羊群，而狮子就等着猎物逃出洞穴。
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 这篇文章强调了团队合作的重要性：一个人无法完成复杂的任务，但如果把所有人的优势汇集起来，就可以取得更好的结果。
 
 <audio src='http://quantile.shangfr.site/fables/audio334_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -751,7 +751,7 @@ The same measures will not suit all circumstances.
 A Lion and an Ass agreed to go hunting together. In their search for game the hunters saw a number of Wild Goats run into a cave, and laid plans to catch them. The Ass was to go into the cave and drive the Goats out, while the Lion would stand at the entrance to strike them down. The plan worked beautifully. The Ass made such a frightful din in the cave, kicking and braying with all his might, that the Goats came running out in a panic of fear, only to fall victim to the Lion. The Ass came proudly out of the cave. Did you see how I made them run?,he said. Yes, indeed, answered the Lion, and if I had not known you and your kind I should certainly have run, too.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 The loud-mouthed boaster does not impress nor frighten those who know him.
 
 <audio src='http://quantile.shangfr.site/fables/audio334.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -771,7 +771,7 @@ The loud-mouthed boaster does not impress nor frighten those who know him.
 这天，一头驴在牧场上散步，它在牧场的一个草地角落里发现了一群蚱蜢正在欢快地鸣叫。驴以极大的欣赏倾听着蚱蜢的歌声，歌声如此欢乐，令它那愿享受快乐的心情充满了唱歌的渴望。“这是什么？”驴非常恭敬地问道，“是什么给了你们如此漂亮的声音吗？你
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 通过对自然界的尊重和保护，我们可以保护我们共同的家园。
 
 <audio src='http://quantile.shangfr.site/fables/audio349_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -787,7 +787,7 @@ The loud-mouthed boaster does not impress nor frighten those who know him.
 One day as an Ass was walking in the pasture, he found some Grasshoppers chirping merrily in a grassy corner of the field. He listened with a great deal of admiration to the song of the Grasshoppers. It was such a joyful song that his pleasure-loving heart was filled with a wish to sing as they did. What is it?, he asked very respectfully, that has given you such beautiful voices? Is there any special food you eat, or is it some divine nectar that makes you sing so wonderfully? Yes, said the Grasshoppers, who were very fond of a joke; it is the dew we drink! Try some and see. So thereafter the Ass would eat nothing and drink nothing but dew. Naturally, the poor foolish Ass soon died.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 The laws of nature are unchangeable.
 
 <audio src='http://quantile.shangfr.site/fables/audio349.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -807,7 +807,7 @@ The laws of nature are unchangeable.
 一个旅行者雇了一头驴带他去一个遥远的国家。驴的主人和旅行者一起走，走在他旁边驱赶把驴，指明路。路穿过一个没有树的平原，那里太阳烈焰骄人，旅行者最终决定停下来休息一下，因为没有其他的荫凉处，旅行者坐在驴的阴影下休息。现在，热度影响了司机和乘客，因此，在热天时，即使有困难，也要尽一切努力停下来休息，以确保安全。
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 这篇文章的寓意是: 在炎热的天气里，即使有困难，也应该设法停下来休息，以确保安全。
 
 <audio src='http://quantile.shangfr.site/fables/audio409_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -823,7 +823,7 @@ The laws of nature are unchangeable.
 A Traveler had hired an Ass to carry him to a distant part of the country. The owner of the Ass went with the Traveler, walking beside him to drive the Ass and point out the way. The road led across a treeless plain where the Sun beat down fiercely. So intense did the heat become, that the Traveler at last decided to stop for a rest, and as there was no other shade to be found, the Traveler sat down in the shadow of the Ass. Now the heat had affected the Driver as much as it had the Traveler, and even more, for he had been walking. Wishing also to rest in the shade cast by the Ass, he began to quarrel with the Traveler, saying he had hired the Ass and not the shadow it cast. The two soon came to blows, and while they were fighting, the Ass took to its heels.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 In quarreling about the shadow we often lose the substance.
 
 <audio src='http://quantile.shangfr.site/fables/audio409.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -843,7 +843,7 @@ In quarreling about the shadow we often lose the substance.
 从前有一天，一位年老的磨坊主和他的儿子正带着他们想要卖掉的驴子上路前往集市。他们节奏缓慢地驱使驴子，因为想要让它保持良好的状态来增加出售的可能性。当他们沿着公路行走的时候，一群旅行者大声地嘲笑他们。“多么可笑的事”，一个人大叫，“他们可以骑着驴子，但他们把它拉着走！”
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 寓意是：有时候慢条斯理的行事方式可能会被嘲笑，但往往会给你带来更好的结果。
 
 <audio src='http://quantile.shangfr.site/fables/audio410_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -859,7 +859,7 @@ In quarreling about the shadow we often lose the substance.
 One day, a long time ago, an old Miller and his Son were on their way to market with an Ass which they hoped to sell. They drove him very slowly, for they thought they would have a better chance to sell him if they kept him in good condition. As they walked along the highway some travelers laughed loudly at them. What foolishness, cried one, to walk when they might as well ride. The most stupid of the three is not the one you would expect it to be. The Miller did not like to be laughed at, so he told his son to climb up and ride. They had gone a little farther along the road, when three merchants passed by. Oho, what have we here? they cried. Respect old age, young man! Get down, and let the old man ride. Though the Miller was not tired, he made the boy get down and climbed up himself to ride, just to please the Merchants. At the next turnstile they overtook some women carrying market baskets loaded with vegetables and other things to sell. Look at the old fool, exclaimed one of them. Perched on the Ass, while that poor boy has to walk. The Miller felt a bit vexed, but to be agreeable he told the Boy to climb up behind him. They had no sooner started out again than a loud shout went up from another company of people on the road. What a crime, cried one, to load up a poor dumb beast like that! They look more able to carry the poor creature, than he to carry them. They must be on their way to sell the poor thing's hide, said another. The Miller and his Son quickly scrambled down, and a short time later, the market place was thrown into an uproar as the two came along carrying the Donkey slung from a pole. A great crowd of people ran out to get a closer look at the strange sight. The Ass did not dislike being carried, but so many people came up to point at him and laugh and shout, that he began to kick and bray, and then, just as they were crossing a bridge, the ropes that held him gave way, and down he tumbled into the river. The poor Miller now set out sadly for home. By trying to please everybody, he had pleased nobody, and lost his Ass besides.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 If you try to please all, you please none.
 
 <audio src='http://quantile.shangfr.site/fables/audio410.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -879,7 +879,7 @@ If you try to please all, you please none.
 一头驴在森林里发现了猎人留下的狮子皮，便穿上它，藏在灌木丛中，突然冲出来吓唬那边经过的动物，一看到他，所有的动物都逃之夭夭。驴看到众多动物都跑，就像自己是国王一样，心里非常开心，不由得张开大嘴，发出刺耳的嘶叫声。一只狐狸和其他动物一样，跑着躲避，但他很快发现这是一头穿上了驴皮的驴，于是他叫着大笑。意义: 即使有时做得很努力，也不要只在看到自己受赞美和被别人佩服时得意忘形，因为你很快就会遭遇同样的遭遇。
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 一个傻瓜可能会被他的衣着和外表所欺骗，但他的话很快就会显示出他的真实身份。
 
 <audio src='http://quantile.shangfr.site/fables/audio423_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -895,7 +895,7 @@ If you try to please all, you please none.
 An Ass found a Lion's skin left in the forest by a hunter. He dressed himself in it, and amused himself by hiding in a thicket and rushing out suddenly at the animals who passed that way. All took to their heels the moment they saw him. The Ass was so pleased to see the animals running away from him, just as if he were King Lion himself, that he could not keep from expressing his delight by a loud, harsh bray. A Fox, who ran with the rest, stopped short as soon as he heard the voice. Approaching the Ass, he said with a laugh: If you had kept your mouth shut you might have frightened me, too. But you gave yourself away with that silly bray.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 A fool may deceive by his dress and appearance, but his words will soon show what he really is.
 
 <audio src='http://quantile.shangfr.site/fables/audio423.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
