--- a/docs/source/fables/山羊.md
+++ b/docs/source/fables/山羊.md
@@ -9,7 +9,7 @@
 朱庇特答应了母山羊的请求，让她们也长出胡须，但是公山羊对此非常不高兴，抱怨女人无理侵犯他们的权利和尊严。因此，为了反对这一举动，他们派出代表向朱庇特抗议。不过，朱庇特劝他们不要提出任何异议。"一绺毛发能算什么呢？"朱庇特说道，"如果她们想要，就让她们拥有吧。但是她们的力量永远无法与你们匹敌。"
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 不要在一些小事上过度纠结，可以为他人让步。
 
 <audio src='http://quantile.shangfr.site/fables/audio61_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -25,7 +25,7 @@
 Jupiter granted beards to the She-Goats at their own request, much to the disgust of the he-Goats, who considered this to be an unwarrantable invasion of their rights and dignities. So they sent a deputation to him to protest against his action. He, however, advised them not to raise any objections. "What's in a tuft of hair?" said he. "Let them have it if they want it. They can never be a match for you in strength."
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 Everyone has their own rights and should be respected for them, regardless of any differences that may be present.
 
 <audio src='http://quantile.shangfr.site/fables/audio61.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -45,7 +45,7 @@ Everyone has their own rights and should be respected for them, regardless of an
 一只母山羊在葡萄园里闲逛，她看到一株刚刚长出几串葡萄的葡萄藤，就过去吃起了它的嫩叶。葡萄藤对母山羊说："我做过什么对不起你的事吗？难道地上没有青草吃了？即便你吃光了我所有的叶子，让我变成光秃秃的藤，当你被放在祭坛上作为祭祀品时，浇灌到你身上的葡萄酒也全是我产出来的。"
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 这篇文章暗示, 尽管母山羊做出伤害他人的行为，敌人也可以以恩慈与宽容的态度去面对他，因为在某些情况下，即使被伤害者被做出巨大牺牲，他也能够成为伤害者的福气。
 
 <audio src='http://quantile.shangfr.site/fables/audio122_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -61,7 +61,7 @@ Everyone has their own rights and should be respected for them, regardless of an
 A Goat was straying in a vineyard, and began to browse on the tender shoots of a Vine which bore several fine bunches of grapes. "What have I done to you," said the Vine, "that you should harm me thus? Isn't there grass enough for you to feed on? All the same, even if you eat up every leaf I have, and leave me quite bare, I shall produce wine enough to pour over you when you are led to the altar to be sacrificed."
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 Always be kind and generous, even in the face of adversity, as good will often come back to you in unexpected ways.
 
 <audio src='http://quantile.shangfr.site/fables/audio122.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -81,7 +81,7 @@ Always be kind and generous, even in the face of adversity, as good will often c
 有一天，牧羊人赶着羊群回到羊圈里，其中有一只山羊失散了，并且拒绝回到羊群中。牧羊人费了好长时间叫她回来，既大声喊叫，又冲她吹口哨，但是山羊根本没注意到他。于是，牧羊人只得冲她扔了一块石头，正巧打断了山羊的一只羊角。惊慌中，牧羊人肯求山羊不要告诉主人，可山羊却说："你这个愚蠢的家伙，即使我不说，我的角也会告诉他事实呀。"
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 竭力掩盖无法隐瞒的事实是没用的。
 
 <audio src='http://quantile.shangfr.site/fables/audio207_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -97,7 +97,7 @@ Always be kind and generous, even in the face of adversity, as good will often c
 A Goatherd was one day gathering his flock to return to the fold, when one of his goats strayed and refused to join the rest. He tried for a long time to get her to return by calling and whistling to her, but the Goat took no notice of him at all; so at last he threw a stone at her and broke one of her horns. In dismay, he begged her not to tell his master: but she replied, "You silly fellow, my horn would cry aloud even if I held my tongue."
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 It's no use trying to hide what can't be hidden.
 
 <audio src='http://quantile.shangfr.site/fables/audio207.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -117,7 +117,7 @@ It's no use trying to hide what can't be hidden.
 牧羊人赶着羊群去牧场吃草，他看到几只野山羊混进了羊群里。傍晚，他将所有的羊都赶回家，关进了羊圈。第二天，天气很不好，无法像往常那样到牧场里去放牧了，于是，他只好让羊群待在羊圈里，在那里喂它们吃草。他只给自己的羊一点点刚够果腹的草，却给那些野山羊更多的草吃，因为他希望让那些野山羊留下来。他心想，只要给它们多吃点草，野山羊可能就不想离开他了。等天气转好，牧羊人又赶着所有的羊来到了牧场。刚来到山下，那些野山羊立刻冲出羊群，四散而逃。牧羊人十分生气，指责它们忘恩负义。"你们这些混蛋！"他喊道，"我对你们那么好，竟然以这种方式纷纷逃跑了！"野山羊听到他的话，回过头来说："是的，你对我们很好，实际上是太好了，正因如此，我们才会更加小心。你对待我们这些新来的羊比你自己的羊群还要好，那么很有可能，当另外一群陌生的羊再加入进来时，我们也会受到冷落，而你却只偏爱它们了。"
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 寓意:耐心待人、平等对待，才能让人留下来，即使你不知晓未来，也应当慎重对待，避免令人失望。
 
 <audio src='http://quantile.shangfr.site/fables/audio276_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -133,7 +133,7 @@ It's no use trying to hide what can't be hidden.
 A Goatherd was tending his goats out at pasture when he saw a number of Wild Goats approach and mingle with his flock. At the end of the day he drove them home and put them all into the pen together. Next day the weather was so bad that he could not take them out as usual: so he kept them at home in the pen, and fed them there. He only gave his own goats enough food to keep them from starving, but he gave the Wild Goats as much as they could eat and more; for he was very anxious for them to stay, and he thought that if he fed them well they wouldn't want to leave him. When the weather improved, he took them all out to pasture again; but no sooner had they got near the hills than the Wild Goats broke away from the flock and scampered off. The Goatherd was very much disgusted at this, and roundly abused them for their ingratitude. "Rascals!" he cried, "to run away like that after the way I've treated you!" Hearing this, one of them turned round and said, "Oh, yes, you treated us all right---too well, in fact; it was just that that put us on our guard. If you treat newcomers like ourselves so much better than your own flock, it's more than likely that, if another lot of strange goats joined yours, we should then be neglected in favour of the last comers."
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 The moral of this story is: Treat all people equally and fairly, and don't show favoritism, or those around you may become suspicious and distrustful.
 
 <audio src='http://quantile.shangfr.site/fables/audio276.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -153,7 +153,7 @@ The moral of this story is: Treat all people equally and fairly, and don't show 
 两只山羊正在山谷的悬崖上高兴地蹦蹦跳跳，碰巧在一个深深的裂缝两边遇到，这里正是一股巨大的山间湍流倾泻而出。一棵倒塌的树干成为唯一穿过裂口的方法，就算两只松鼠也不能安全地彼此擦身而过。这狭窄的小路会让最勇敢的人都战栗。不过我们的山羊就不同了，他们勇往直前，踏上了这条小路，最终惊喜地发现他们可以安全地跨越悬崖。
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 这篇文章寓意是：即使面对极具挑战的情况，勇敢面对困难，并保持进取心，总会有最终的成功与收获。
 
 <audio src='http://quantile.shangfr.site/fables/audio313_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -169,7 +169,7 @@ The moral of this story is: Treat all people equally and fairly, and don't show 
 Two Goats, frisking gayly on the rocky steeps of a mountain valley, chanced to meet, one on each side of a deep chasm through which poured a mighty mountain torrent. The trunk of a fallen tree formed the only means of crossing the chasm, and on this not even two squirrels could have passed each other in safety. The narrow path would have made the bravest tremble. Not so our Goats. Their pride would not permit either to stand aside for the other. One set her foot on the log. The other did likewise. In the middle they met horn to horn. Neither would give way, and so they both fell, to be swept away by the roaring torrent below.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 It is better to yield than to come to misfortune through stubbornness.
 
 <audio src='http://quantile.shangfr.site/fables/audio313.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -189,7 +189,7 @@ It is better to yield than to come to misfortune through stubbornness.
 一个寒冷的暴风雨的日子，一位牧羊人把他的羊驱赶进一个洞穴，里面也有一些野羊找到了藏身之处。牧羊人想把野羊也变成他的羊群，于是他给他们好好喂食。但是他只给自己的羊群提供足够勉强生存的食物。当天气放晴，牧羊人带着羊群出去吃饭，而野羊却跑上山，拒绝接受任何食物。
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 这篇文章的寓意是：无论你如何努力，如果受害者不愿接受帮助，你也拿什么帮助他们。
 
 <audio src='http://quantile.shangfr.site/fables/audio363_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -205,7 +205,7 @@ It is better to yield than to come to misfortune through stubbornness.
 One cold stormy day a Goatherd drove his Goats for shelter into a cave, where a number of Wild Goats had also found their way. The Shepherd wanted to make the Wild Goats part of his flock; so he fed them well. But to his own flock, he gave only just enough food to keep them alive. When the weather cleared, and the Shepherd led the Goats out to feed, the Wild Goats scampered off to the hills. Is that the thanks I get for feeding you and treating you so well? complained the Shepherd. Do not expect us to join your flock, replied one of the Wild Goats. We know how you would treat us later on, if some strangers should come as we did.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 It is unwise to treat old friends badly for the sake of new ones.
 
 <audio src='http://quantile.shangfr.site/fables/audio363.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -225,7 +225,7 @@ It is unwise to treat old friends badly for the sake of new ones.
 牛曾经逃离一只狮子，他进入放牧员用来在暴风雨和夜晚风营的洞穴。碰巧其中有一只山羊落在后面，当牛一进来，那只山羊低头冲向它，撞他的角。因为狮子还围在洞口处，牛只好受到这种侮辱。牛说，别以为我是因为害怕你才服从你的令。等狮子离开，我会给你一只耳光！
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 这篇文章的寓意是：即使处于被动的地位，也要记住自己的尊严。
 
 <audio src='http://quantile.shangfr.site/fables/audio374_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -241,7 +241,7 @@ It is unwise to treat old friends badly for the sake of new ones.
 A Bull once escaped from a Lion by entering a cave which the Goatherds used to house their flocks in stormy weather and at night. It happened that one of the Goats had been left behind, and the Bull had no sooner got inside than this Goat lowered his head and made a rush at him, butting him with his horns. As the Lion was still prowling outside the entrance to the cave, the Bull had to submit to the insult. Do not think, he said, that I submit to your cowardly treatment because I am afraid of you. When that Lion leaves, I'll teach you a lesson you won't forget.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 It is wicked to take advantage of another's distress.
 
 <audio src='http://quantile.shangfr.site/fables/audio374.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -261,7 +261,7 @@ It is wicked to take advantage of another's distress.
 一只山羊从羊群中走散，被一片三叶草诱惑了。放羊的试图叫它回来，但是毫无作用。它不听他的话。于是他拾起一块石头把它扔了，打破了山羊的角。放羊的害怕了，请求它，“不要告诉主人”。“不，”山羊说，“这断了的角可以替我说话！”
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 这篇文章的寓意是：说出真相是非常重要的，它可以帮助我们成功。
 
 <audio src='http://quantile.shangfr.site/fables/audio381_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -277,7 +277,7 @@ It is wicked to take advantage of another's distress.
 A Goat strayed away from the flock, tempted by a patch of clover. The Goatherd tried to call it back, but in vain. It would not obey him. Then he picked up a stone and threw it, breaking the Goat's horn. The Goatherd was frightened. Do not tell the master, he begged the Goat. No, said the Goat, that broken horn can speak for itself!
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 Wicked deeds will not stay hid.
 
 <audio src='http://quantile.shangfr.site/fables/audio381.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
