--- a/docs/source/fables/猴子.md
+++ b/docs/source/fables/猴子.md
@@ -9,7 +9,7 @@
 有一次，猴子在动物大聚会时跳起舞来，赢得了大家的好感，故而被选为动物之王。然而，狐狸十分嫉妒猴子当选为王。有一天，当他发现一个捕兽夹子里有一块肉时，便把猴子带过去说："我发现这里有些好吃的东西，陛下，但是我没敢动用，因为我认为应该留给国王享用。您能亲自去取吗？"猴子立刻跑过去拿，结果却被夹子夹住了。他斥责狐狸陷害他，而狐狸却笑着说："猴子，你这种笨蛋竟然还想做万兽之王！"
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 骄傲在败坏以先。
 
 <audio src='http://quantile.shangfr.site/fables/audio53_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -25,7 +25,7 @@
 At a gathering of all the animals the Monkey danced and delighted them so much that they made him their King. The Fox, however, was very much disgusted at the promotion of the Monkey: so having one day found a trap with a piece of meat in it, he took the Monkey there and said to him, "Here is a dainty morsel I have found, sire; I did not take it myself, because I thought it ought to be reserved for you, our King. Will you be pleased to accept it?" The Monkey made at once for the meat and got caught in the trap. Then he bitterly reproached the Fox for leading him into danger; but the Fox only laughed and said, "O Monkey, you call yourself King of the Beasts and haven't more sense than to be taken in like that!"
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 Pride comes before a fall.
 
 <audio src='http://quantile.shangfr.site/fables/audio53.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -45,7 +45,7 @@ Pride comes before a fall.
 朱庇特通知森林中所有动物，要给那些他认为拥有最漂亮子孙的动物颁奖。母猴怀里抱着一只扁鼻无毛、相貌丑陋的小猴子，与其它动物一起来到朱庇特那里参加评奖。当大家看到那只小猴子时，发出一阵哄堂大笑。但是，母猴却抱紧了自己的孩子，坚定地说："朱庇特或许会奖励他最喜欢的那一个，但是，我坚定地认为自己的孩子就是最最漂亮的那一个。"
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 在母亲的眼里都会认为自己的孩子是永远漂亮和美丽的孩子。
 
 <audio src='http://quantile.shangfr.site/fables/audio56_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -61,7 +61,7 @@ Pride comes before a fall.
 Jupiter issued a proclamation to all the beasts, and offered a prize to the one who, in his judgment, produced the most beautiful offspring. Among the rest came the Monkey, carrying a baby monkey in her arms, a hairless, flat-nosed little fright. When they saw it, the gods all burst into peal on peal of laughter; but the Monkey hugged her little one to her, and said, "Jupiter may give the prize to whomsoever he likes: but I shall always think my baby the most beautiful of them all."
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 Mother love is blind.
 
 <audio src='http://quantile.shangfr.site/fables/audio56.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -81,7 +81,7 @@ Mother love is blind.
 在一次百兽集会上，猴子兴奋地载歌载舞，大获赞赏。待表演完后，百兽个个为之喝彩。骆驼十分嫉妒猴子，就想用同样的方式也赢得大家的喝彩。于是，他站了起来，开始显示自己的舞技，他那怪异的姿态真是洋相百出。结果，因为这不雅的表演，百兽们哄他下台，并把他赶跑了。
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 猴子的表演给大家带来欢乐，但要记住：只有在真正会的技能前提下，才能受到大家的认可，欺骗表面的表演只会得到人们的反对。
 
 <audio src='http://quantile.shangfr.site/fables/audio162_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -97,7 +97,7 @@ Mother love is blind.
 At a gathering of all the beasts the Monkey gave an exhibition of dancing and entertained the company vastly. There was great applause at the finish, which excited the envy of the Camel and made him desire to win the favour of the assembly by the same means. So he got up from his place and began dancing, but he cut such a ridiculous figure as he plunged about, and made such a grotesque exhibition of his ungainly person, that the beasts all fell upon him with ridicule and drove him away.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 The moral of the story is to be proud of your own unique talents and abilities, rather than trying to imitate someone else who may appear to be more successful.
 
 <audio src='http://quantile.shangfr.site/fables/audio162.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -117,7 +117,7 @@ The moral of the story is to be proud of your own unique talents and abilities, 
 人类在出海航行时喜欢带上哈巴狗或猴子之类的宠物，以供消遣。一个人从东方回到雅典时，就带了一只猴子随行。当他们靠近阿提卡海岸时，一场风暴突然袭来，船被狂风巨浪打翻了，甲板上的所有人都被抛入水中，人们试着游向岸边，猴子也在其中。一只海豚看见了猴子，以为是人，立即将它驮到背上，游向岸边。当他们快要到达雅典的珀赖欧斯海港时，海豚问那猴子是不是雅典人。猴子回答说是的，而且还补充说自己出身名门望族。"那么，你肯定了解珀赖欧斯了？"海琢接着又问道。猴子以为海豚说的是某个官员或什么人，便回答说："他是我的一个老朋友。"海豚察觉到了猴子的虚伪，十分气愤，便没入水中，不幸的猴子很快就被淹死了。
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 此文寓意是：虚伪将带来惩罚，真诚才能获得尊重。
 
 <audio src='http://quantile.shangfr.site/fables/audio226_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -133,7 +133,7 @@ The moral of the story is to be proud of your own unique talents and abilities, 
 When people go on a voyage they often take with them lap-dogs or monkeys as pets to wile away the time. Thus it fell out that a man returning to Athens from the East had a pet Monkey on board with him. As they neared the coast of Attica a great storm burst upon them, and the ship capsized. All on board were thrown into the water, and tried to save themselves by swimming, the Monkey among the rest. A Dolphin saw him, and, supposing him to be a man, took him on his back and began swimming towards the shore. When they got near the Piraeus, which is the port of Athens, the Dolphin asked the Monkey if he was an Athenian. The Monkey replied that he was, and added that he came of a very distinguished family. "Then, of course, you know the Piraeus," continued the Dolphin. The Monkey thought he was referring to some high official or other, and replied, "Oh, yes, he's a very old friend of mine." At that, detecting his hypocrisy, the Dolphin was so disgusted that he dived below the surface, and the unfortunate Monkey was quickly drowned.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 The moral of this story is that honesty is always the best policy. It is better to be truthful and accept the consequences than to deceive and risk dire consequences.
 
 <audio src='http://quantile.shangfr.site/fables/audio226.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -153,7 +153,7 @@ The moral of this story is that honesty is always the best policy. It is better 
 在为狮王举行的盛大庆祝活动中，猴子被要求跳舞以供宾客欣赏。他的舞蹈非常精彩，动物们都对他的优雅和轻盈都非常满意。猴子所受的赞美使骆驼感到妒忌。他确信自己可以像猴子一样跳得很好，甚至更好，所以他挤进了围着猴子的人群，并且站在后腿上开始跳舞，但是他不能表现出同样优雅的舞蹈。
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 本文给出的寓意是：妒忌乃是毁灭良知之源，节制你的欲望，做你力所能及的事。
 
 <audio src='http://quantile.shangfr.site/fables/audio318_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -169,7 +169,7 @@ The moral of this story is that honesty is always the best policy. It is better 
 At a great celebration in honor of King Lion, the Monkey was asked to dance for the company. His dancing was very clever indeed, and the animals were all highly pleased with his grace and lightness. The praise that was showered on the Monkey made the Camel envious. He was very sure that he could dance quite as well as the Monkey, if not better, so he pushed his way into the crowd that was gathered around the Monkey, and rising on his hind legs, began to dance. But the big hulking Camel made himself very ridiculous as he kicked out his knotty legs and twisted his long clumsy neck. Besides, the animals found it hard to keep their toes from under his heavy hoofs. At last, when one of his huge feet came within an inch of King Lion's nose, the animals were so disgusted that they set upon the Camel in a rage and drove him out into the desert. Shortly afterward, refreshments, consisting mostly of Camel's hump and ribs, were served to the company.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 Do not try to ape your betters.
 
 <audio src='http://quantile.shangfr.site/fables/audio318.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -189,7 +189,7 @@ Do not try to ape your betters.
 很久以前，有一艘前往雅典的希腊船只在雅典港口毗拉约斯海岸附近沉没了。如果不是当时非常友善的海豚，特别是雅典人的海豚，所有人都会灭亡。但是海豚把沉船的人搭在他们的背上，游到岸上。希腊人在航行时习惯把宠物猴子和狗带上。所以当海豚看到一只猴子在水里挣扎时，他们也把它帮到了岸上。
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 这篇文章的寓意是：友谊可以战胜任何障碍，人类要记住回报友谊和非人类朋友的恩情。
 
 <audio src='http://quantile.shangfr.site/fables/audio337_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -205,7 +205,7 @@ Do not try to ape your betters.
 It happened once upon a time that a certain Greek ship bound for Athens was wrecked off the coast close to Piraeus, the port of Athens. Had it not been for the Dolphins, who at that time were very friendly toward mankind and especially toward Athenians, all would have perished. But the Dolphins took the shipwrecked people on their backs and swam with them to shore. Now it was the custom among the Greeks to take their pet monkeys and dogs with them whenever they went on a voyage. So when one of the Dolphins saw a Monkey struggling in the water, he thought it was a man, and made the Monkey climb up on his back. Then off he swam with him toward the shore. The Monkey sat up, grave and dignified, on the Dolphin's back. You are a citizen of illustrious Athens, are you not?, asked the Dolphin politely. Yes, answered the Monkey, proudly. My family is one of the noblest in the city. Indeed, said the Dolphin. Then of course you often visit Piraeus. Yes, yes, replied the Monkey.Indeed, I do. I am with him constantly. Piraeus is my very best friend. This answer took the Dolphin by surprise, and, turning his head, he now saw what it was he was carrying. Without more ado, he dived and left the foolish Monkey to take care of himself, while he swam off in search of some human being to save.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 One falsehood leads to another.
 
 <audio src='http://quantile.shangfr.site/fables/audio337.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -225,7 +225,7 @@ One falsehood leads to another.
 从前森林中有只动物的婴儿表演，朱庇特提供了奖品。当然，远近的狼狈母亲都把她们的宝宝们带来参赛了。然而，没有一个比猴子妈妈早到。她骄傲地在其他参赛者中呈现她的孩子。正如你所想，当动物们看到这只丑陋的鼻子扁扁的，无毛的，眼睛瞪大的小生物时，这里爆发出了一声嗤笑。
 
 ```{admonition} **寓意**
-:class: dropdown
+:class: tip
 寓意：即使当别人看到你不被认可的特性时会大笑，依然要坚持自己的自信。
 
 <audio src='http://quantile.shangfr.site/fables/audio415_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
@@ -241,7 +241,7 @@ One falsehood leads to another.
 There was once a baby show among the Animals in the forest. Jupiter provided the prize. Of course all the proud mammas from far and near brought their babies. But none got there earlier than Mother Monkey. Proudly she presented her baby among the other contestants. As you can imagine, there was quite a laugh when the Animals saw the ugly flat-nosed, hairless, pop-eyed little creature. Laugh if you will, said the Mother Monkey. Though Jupiter may not give him the prize, I know that he is the prettiest, the sweetest, the dearest darling in the world.
 
 ```{admonition} **Moral**
-:class: dropdown
+:class: tip
 Mother love is blind.
 
 <audio src='http://quantile.shangfr.site/fables/audio415.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
